--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+     <nav class="main-navbar"></nav>
+     <main class="main-presentacion"></main>
+     <section class="main-integrantes"></section>
+     <section class="main-shoes"></section>
+     <section class="main-popular"></section>
+     <section class="main-instagram"></section>
+     <section class="footer"></section>
 </body>
 </html>
