--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <nav class="main-navbar"></nav>
      <main class="main-presentacion"></main>
      <section class="main-integrantes"></section>
-     <section class="main-shoes"></section>
+     <section class="main-shows"></section>
      <section class="main-popular"></section>
      <section class="main-instagram"></section>
      <section class="footer"></section>
