--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
      <nav class="main-navbar"></nav>
-     <main class="main-presentacion"></main>
+     <main class="main-presentacion">
+         <img class="img" src="/img/img1.jpg" alt="">
+         <img class="img" src="/img/img2.jpg" alt="">
+         <img class="img" src="/img/img3.jpg" alt="">
+         <img class="img" src="/img/img4.jpg" alt="">
+     </main>
      <section class="main-integrantes"></section>
      <section class="main-shows"></section>
      <section class="main-popular"></section>
