--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-     <nav class="main-navbar"></nav>
-     <main class="main-presentacion">
-         <img class="img" src="/img/img1.jpg" alt="">
-         <img class="img" src="/img/img2.jpg" alt="">
-         <img class="img" src="/img/img3.jpg" alt="">
-         <img class="img" src="/img/img4.jpg" alt="">
-     </main>
-     <section class="main-integrantes"></section>
-     <section class="main-shows"></section>
-     <section class="main-popular"></section>
-     <section class="main-instagram"></section>
-     <section class="footer"></section>
+    <nav class="main-navbar"></nav>
+    <main class="main-presentacion">
+        <img src="/img/logo-img.png" alt="img-logo" class="img-logo-main">
+        <h1 class="titulo-principal texto-main">Welcome to the Jungle</h1>
+        <h1 class="titulo-principal2 texto-main">Get Ticket Now!</h1>
+    </main>
+    <section class="main-integrantes"></section>
+    <section class="main-shows"></section>
+    <section class="main-popular"></section>
+    <section class="main-instagram"></section>
+    <section class="footer"></section>
 </body>
+
 </html>
