--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <nav class="main-navbar"></nav>
     <main class="main-presentacion">
         <img src="/img/logo-img.png" alt="img-logo" class="img-logo-main">
-        <h1 class="titulo-principal texto-main">Welcome to the Jungle</h1>
-        <h1 class="titulo-principal2 texto-main">Get Ticket Now!</h1>
+            <div class="textos-main-container">
+                <h1 class="titulo-principal texto-main">Welcome to the Jungle</h1>
+                <h1 class="titulo-principal2 texto-main">Get Tickets Now!</h1>
+            </div>        
     </main>
     <section class="main-integrantes"></section>
     <section class="main-shows"></section>
