--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 <body>
     <nav class="main-navbar"></nav>
     <main class="main-presentacion">
-        <img src="/img/logo-img.png" alt="img-logo" class="img-logo-main">
+        <div class="main-presentacion-container">
+           <img src="/img/logo-img.png" alt="img-logo" class="img-logo-main">
             <div class="textos-main-container">
                 <h1 class="titulo-principal texto-main">Welcome to the Jungle</h1>
                 <h1 class="titulo-principal2 texto-main">Get Tickets Now!</h1>
-            </div>        
+            </div>    
+        </div>             
     </main>
     <section class="main-integrantes"></section>
     <section class="main-shows"></section>
